--- a/libft/Makefile
+++ b/libft/Makefile
@@ -3,13 +3,14 @@ PART1 = ft_strlen.c ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c \
 		ft_isprint.c ft_toupper.c ft_tolower.c ft_strncmp.c ft_strlcpy.c ft_strlcat.c \
 		ft_atoi.c ft_memset.c ft_memcpy.c ft_memmove.c ft_bzero.c ft_memchr.c \
 		ft_memcmp.c ft_strchr.c ft_strrchr.c ft_strnstr.c ft_calloc.c ft_strdup.c
-PART2 = 
+		
+PART2 = ft_substr.c ft_strjoin.c ft_strtrim.c
 
 BONUS = 
 
 
 
-SRC = ${PART1}
+SRC = ${PART1} ${PART2}
 OBJS = ${SRC:.c=.o}
 HEADER = libft.h
 INCLUDE = -I .
