--- a/libft/Makefile
+++ b/libft/Makefile
@@ -5,7 +5,7 @@ PART1 = ft_strlen.c ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c \
 		ft_memcmp.c ft_strchr.c ft_strrchr.c ft_strnstr.c ft_calloc.c ft_strdup.c
 		
 PART2 = ft_substr.c ft_strjoin.c ft_strtrim.c ft_split.c ft_itoa.c ft_putchar_fd.c \
-	    ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c
+	    ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c ft_striteri.c ft_strmapi.c
 
 BONUS = 
 
