--- a/libft/Makefile
+++ b/libft/Makefile
@@ -7,7 +7,7 @@ PART1 = ft_strlen.c ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c \
 PART2 = ft_substr.c ft_strjoin.c ft_strtrim.c ft_split.c ft_itoa.c ft_putchar_fd.c \
 	    ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c ft_striteri.c ft_strmapi.c
 
-BONUS = ft_lstnew.c
+BONUS = ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c ft_lstadd_back.c
 
 
 
@@ -34,6 +34,9 @@ fclean: clean
 
 tclean: clean
 		${RM} teste
+
+bonus: all
+		ar rcs ${NAME} ${BONUS} ${HEADER} 
 
 re: fclean all
 
